name:          gekkio-fi
version:       0.0.0.0
homepage:      http://gekkio.fi
license:       AllRightsReserved
license-file:  LICENSE
author:        Joonas Javanainen
maintainer:    joonas.javanainen@gmail.com
copyright:     © 2014 Joonas Javanainen
category:      Web
build-type:    Simple
cabal-version: >= 1.10

executable site
  main-is:          site.hs
  default-language: Haskell2010
  build-depends:    base   >= 4.6 && < 4.7,
                    containers,
                    hakyll >= 4.5 && < 4.6
