name:          gekkio-fi
version:       0.0.0.0
homepage:      http://gekkio.fi
license:       AllRightsReserved
license-file:  LICENSE
author:        Joonas Javanainen
maintainer:    joonas.javanainen@gmail.com
copyright:     © 2010-2018 Joonas Javanainen
category:      Web
build-type:    Simple
cabal-version: >= 1.10

executable site
  main-is:          site.hs
  default-language: Haskell2010
  build-depends:    base        >= 4.6 && < 5,
                    hakyll      >= 4.9 && < 4.10,
                    hakyll-sass >= 0.2 && < 0.3,
                    pandoc      >= 1.19 && < 1.20
